--- a/PDM123/app/src/main/res/values-es-rMX/strings.xml
+++ b/PDM123/app/src/main/res/values-es-rMX/strings.xml
@@ -6,5 +6,5 @@
     <string name="third_partial">Tercer Parcial</string>
     <string name="padel_score">Puntuacion de Padel</string>
     <string name="even_or_odd">Par o Non</string>
-
+    <string name="random_card">Carta Aleatoria</string>
 </resources>
